[workspace]
members = [ "smtp-message", "smtp-message/fuzz",
            "smtp-client",
            "smtp-server", "smtp-server/fuzz",
            "smtp-queue", "smtp-queue-fs",
            "yuubind-rpc",
            "yuubind",
            "yuubind-config",
            "yuubind-config-example",
            "benches" ]

[profile.release]
lto = true

[profile.bench]
lto = true
