[workspace]
members = [ "smtp-message", "smtp-message/fuzz",
            "smtp-client",
            "smtp-server-types", "smtp-server", "smtp-server/fuzz",
            "smtp-queue", "smtp-queue-fs",
            "kannader-rpc",
            "kannader",
            "kannader-config-types",
            "kannader-config",
            "kannader-config-example",
            "benches" ]

[profile.release]
lto = true

[profile.bench]
lto = true
