[workspace]
members = [ "smtp-message", "smtp-message/fuzz",
            "smtp-client",
            "smtp-server-types", "smtp-server", "smtp-server/fuzz",
            "smtp-queue-types", "smtp-queue", "smtp-queue-fs",
            "kannader-types",
            "kannader-rpc",
            "kannader",
            "kannader-config-macros",
            "kannader-config",
            "kannader-config-forwarder",
            "benches" ]

[profile.release]
lto = true

[profile.bench]
lto = true
