[package]
name = "kannader-config-example"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Example configuration system for kannader"
edition = "2018"

publish = false

target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
bincode = "1.3.1"
chrono = "0.4.19"

smtp-message = { path = "../smtp-message" }
smtp-server-types = { path = "../smtp-server-types" }
kannader-config = { path = "../kannader-config" }
