[package]
name = "kannader-config-forwarder"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Forwarder configuration blob for kannader"
edition = "2018"

target = "wasm32-wasi"

[[bin]]
name = "forwarder"
path = "src/main.rs"
test = false

[dependencies]
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

smtp-message = { path = "../smtp-message" }
smtp-server-types = { path = "../smtp-server-types" }
kannader-config = { path = "../kannader-config" }
kannader-types = { path = "../kannader-types" }
