cargo-features = ["per-package-target"]

[package]
name = "kannader-config-forwarder"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Forwarder configuration blob for kannader"
readme = "../README.md"
repository = "https://github.com/Ekleog/kannader"
edition = "2018"

forced-target = "wasm32-wasi"

[[bin]]
name = "forwarder"
path = "src/main.rs"
test = false

[dependencies]
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

smtp-message = { path = "../smtp-message", version = "0.1.0" }
smtp-server-types = { path = "../smtp-server-types", version = "0.1.0" }
kannader-config = { path = "../kannader-config", version = "0.1.0" }
kannader-types = { path = "../kannader-types", version = "0.1.0" }
