cargo-features = ["per-package-target"]

[package]
name = "kannader-config"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Configuration system for kannader"
edition = "2018"

forced-target = "wasm32-wasi"

[lib]
test = false

[dependencies]
anyhow = "1.0.37"
bincode = "1.3.1"
serde-error = "0.1.0"
static_assertions = "1.1.0"

kannader-config-macros = { path = "../kannader-config-macros" }
kannader-types = { path = "../kannader-types" }
smtp-message = { path = "../smtp-message" }
smtp-queue-types = { path = "../smtp-queue-types" }
smtp-server-types = { path = "../smtp-server-types" }
