cargo-features = ["per-package-target"]

[package]
name = "kannader-config"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Configuration system for kannader"
readme = "../README.md"
repository = "https://github.com/Ekleog/kannader"
edition = "2018"

forced-target = "wasm32-wasi"

[lib]
test = false

[dependencies]
anyhow = "1.0"
bincode = "1.3"
serde-error = "0.1.0"
static_assertions = "1.1"

kannader-config-macros = { path = "../kannader-config-macros", version = "0.1.0" }
kannader-types = { path = "../kannader-types", version = "0.1.0" }
smtp-message = { path = "../smtp-message", version = "0.1.0" }
smtp-queue-types = { path = "../smtp-queue-types", version = "0.1.0" }
smtp-server-types = { path = "../smtp-server-types", version = "0.1.0" }
