[package]
name = "kannader"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "A highly configurable SMTP server written in Rust"
edition = "2018"

[dependencies]
anyhow = "1.0.36"
async-std-resolver = "0.20.0"
async-tls = "0.11.0"
async-trait = "0.1.30"
bincode = "1.3.1"
chrono = "0.4.19"
duplexify = "1.2.2"
easy-parallel = "3.1.0"
futures = "0.3.8"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
scoped-tls = "1.0.0"
serde = { version = "1.0.118", features = ["derive"] }
smol = "1.2.5"
structopt = "0.3.21"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
trust-dns-resolver = "0.19.6"
wasmtime = "0.21.0"
webpki = "0.21.4"

smtp-client = { path = "../smtp-client" }
smtp-queue = { path = "../smtp-queue" }
smtp-queue-fs = { path = "../smtp-queue-fs" }
smtp-message = { path = "../smtp-message" }
smtp-server = { path = "../smtp-server" }
smtp-server-types = { path = "../smtp-server-types" }
kannader-config-types = { path = "../kannader-config-types" }
