[package]
name = "kannader"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "A highly configurable SMTP server written in Rust"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std-resolver = "0.20.0"
async-tls = "0.11.0"
async-trait = "0.1.30"
bincode = "1.3"
cap-std = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
duplexify = "1.2"
easy-parallel = "3.1"
futures = "0.3.8"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2.0"
scoped-tls = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-error = "0.1.0"
smol = "1.2"
structopt = "0.3.21"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
trust-dns-resolver = { version = "0.20.0", default-features = false }
# TODO: go back to the normal version once the new wasi api is out
wasmtime = "0.22.0"
wasmtime-wasi = "0.22.0"
webpki = "0.21.4"

kannader-config-macros = { path = "../kannader-config-macros" }
kannader-types = { path = "../kannader-types" }
smtp-client = { path = "../smtp-client" }
smtp-queue = { path = "../smtp-queue" }
smtp-queue-fs = { path = "../smtp-queue-fs" }
smtp-queue-types = { path = "../smtp-queue-types" }
smtp-message = { path = "../smtp-message" }
smtp-server = { path = "../smtp-server" }
smtp-server-types = { path = "../smtp-server-types" }
