[package]
name = "kannader"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "A highly configurable SMTP server written in Rust"
readme = "../README.md"
repository = "https://github.com/Ekleog/kannader"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-compat = "0.2.1"
async-std-resolver = "0.21.2"
async-trait = "0.1.30"
bincode = "1.3"
cap-std = "0.24.4"
chrono = { version = "0.4.19", features = ["serde"] }
duplexify = "1.2"
easy-parallel = "3.1"
futures = "0.3.8"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
scoped-tls = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-error = "0.1.0"
smol = "1.2"
structopt = "0.3.21"
tokio-rustls = "0.23.4"
tracing = "0.1.22"
tracing-subscriber = "0.3.11"
trust-dns-resolver = { version = "0.21.2", default-features = false }
wasmtime = "1.0"
wasmtime-wasi = "1.0"
webpki = "0.22.0"

kannader-config-macros = { path = "../kannader-config-macros", version = "0.1.0" }
kannader-types = { path = "../kannader-types", version = "0.1.0" }
smtp-client = { path = "../smtp-client", version = "0.1.0" }
smtp-queue = { path = "../smtp-queue", version = "0.1.0" }
smtp-queue-fs = { path = "../smtp-queue-fs", version = "0.1.0" }
smtp-queue-types = { path = "../smtp-queue-types", version = "0.1.0" }
smtp-message = { path = "../smtp-message", version = "0.1.0" }
smtp-server = { path = "../smtp-server", version = "0.1.0" }
smtp-server-types = { path = "../smtp-server-types", version = "0.1.0" }
