[package]
name = "smtp-client"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
categories = ["email", "network-programming"]
keywords = ["smtp", "client", "asynchronous", "email"]
description = "Asynchronous SMTP client library"
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bitflags = "1.2"
chrono = "0.4.19"
duplexify = "1.2"
futures = { version = "0.3.8", features = ["write-all-vectored"] }
rand = "0.8.0"
smol = "1.2"
thiserror = "1.0"
tracing = "0.1.22"
trust-dns-resolver = { version = "0.21.2", default-features = false }

smtp-message = { path = "../smtp-message" }
