[package]
name = "smtp-message"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming", "parser-implementations"]
keywords = ["parser", "builder", "smtp", "email"]
description = "Line-oriented parser and builder for SMTP protocol messages"
edition = "2018"

[dependencies]
bytes = "0.5.4"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3.4"
nom = "3.2" # TODO: (B) update to 4.0

[dev-dependencies]
quickcheck = "0.9.2"
