[package]
name = "smtp-message"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming", "parser-implementations"]
keywords = ["parser", "builder", "smtp", "email"]
description = "Line-oriented parser and builder for SMTP protocol messages"
edition = "2018"

[dependencies]
either = "1.5.3"
futures = "0.3.4"
idna = "0.2.0"
lazy_static = "1.4.0"
nom = "5.1.1"
serde = { version = "1.0.110", features = ["derive"] }
regex-automata = { version = "0.1.9" }

[dev-dependencies]
quickcheck = "0.9.2"
