[package]
name = "smtp-message"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming", "parser-implementations"]
keywords = ["parser", "builder", "smtp", "email"]
description = "Line-oriented parser and builder for SMTP protocol messages"
edition = "2018"

[features]
fuzz-targets = []

[dependencies]
auto_enums = "0.7.4"
futures = "0.3.10"
idna = "0.2.0"
lazy_static = "1.4.0"
nom = "6.0.1"
pin-project = "1.0.2"
serde = { version = "1.0.110", features = ["derive"], optional = true }
regex-automata = { version = "0.1.9" }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
itertools = "0.10.0"
maplit = "1.0.2"
