[package]
name = "smtp-queue-fs"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["queue", "smtp", "email"]
description = "Storage handler for smtp-queue based on the local filesystem"
edition = "2018"

[dependencies]
async-trait = "0.1.30"
futures = "0.3.10"
openat = "0.1.19"
serde = "1.0.110"
serde_json = "1.0.53"
smtp-queue = { path = "../smtp-queue" }
smol = "1.2.5"
thiserror = "1.0.22"
uuid = { version = "0.8.1", features = ["v4"] }
walkdir = "2.3.1"

[dev-dependencies]
dir-diff = "0.3.2"
tempdir = "0.3.7"