[package]
name = "smtp-queue-fs"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
categories = ["email", "network-programming"]
keywords = ["queue", "smtp", "email"]
description = "Storage handler for smtp-queue based on the local filesystem"
edition = "2018"

[dependencies]
async-trait = "0.1.30"
futures = "0.3.4"
openat = "0.1.19"
serde = "1.0"
serde_json = "1.0"
smtp-queue = { path = "../smtp-queue" }
smol = "1.2"
thiserror = "1.0"
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2.3"

[dev-dependencies]
dir-diff = "0.3.2"
tempdir = "0.3.7"
