[package]
name = "smtp-queue-types"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["queue", "smtp", "email"]
description = "Type definitions for smtp-queue"
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0.119", features = ["derive", "rc"] }
time = "0.1.44"
