[package]
name = "smtp-queue-types"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
categories = ["email", "network-programming"]
keywords = ["queue", "smtp", "email"]
description = "Type definitions for smtp-queue"
readme = "../README.md"
repository = "https://github.com/Ekleog/kannader"
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
time = "0.1.43"
