[package]
name = "smtp-queue"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["queue", "smtp", "email"]
description = "Queue for SMTP messages using smol"
edition = "2018"

[dependencies]
async-trait = "0.1.30"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.9"
serde = { version = "1.0.110", features = ["derive"] }
smol = "1.2.5"
time = "0.1.44"

smtp-message = { path = "../smtp-message", features = ["serde"] }