[package]
name = "smtp-queue"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
categories = ["email", "network-programming"]
keywords = ["queue", "smtp", "email"]
description = "Queue for SMTP messages using smol"
readme = "../README.md"
repository = "https://github.com/Ekleog/kannader"
edition = "2018"

[dependencies]
async-trait = "0.1.30"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
smol = "1.2"

smtp-message = { path = "../smtp-message", features = ["serde"] }
smtp-queue-types = { path = "../smtp-queue-types" }
