[package]
name = "smtp-server-types"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT OR Apache-2.0"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Types required for configuring the smtp-server crate"
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }

smtp-message = { path = "../smtp-message", features = ["serde"] }
