[package]
name = "smtp-server"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Asynchronous SMTP server library"
edition = "2018"

[dependencies]
bytes = "0.4.6"
futures = "0.3.4"
itertools = "0.7.8"

smtp-message = { path = "../smtp-message" }
