[package]
name = "smtp-server"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Asynchronous SMTP server library"
edition = "2018"

[dependencies]
async-trait = "0.1.30"
futures = "0.3.4"

smtp-message = { path = "../smtp-message" }

[dev-dependencies]
duplexify = "1.1.0"