[package]
name = "smtp-server"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Asynchronous SMTP server library"
edition = "2018"

[dependencies]
async-trait = "0.1.30"
chrono = "0.4.19"
duplexify = "1.1.0"
futures = { version = "0.3.11", features = ["write-all-vectored"] }
smol = "1.2.5"

smtp-message = { path = "../smtp-message" }
smtp-server-types = { path = "../smtp-server-types" }

[dev-dependencies]
piper = "0.1.3"
