[package]
name = "yuubind-config-types"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["email", "network-programming"]
keywords = ["smtp", "server", "asynchronous", "email"]
description = "Types for yuubind's configuration system"
edition = "2018"

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }

smtp-message = { path = "../smtp-message", features = ["serde"] }
smtp-server-types = { path = "../smtp-server-types" }
