[package]
name = "integration"
version = "0.0.1"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "AGPL-3.0-only"
edition = "2018"
publish = false

[[test]]
name = "tests"
harness = false

[dev-dependencies]
anyhow = "1.0"
assert_fs = "1.0"
async-std-resolver = "0.21.2"
async-trait = "0.1.42"
duplexify = "1.2"
futures = "0.3.8"
libtest-mimic = "0.4.1"
netsim-embed = "0.1.1"
netsim-embed-machine = "0.1.1"
smol = "1.2"
tracing = "0.1.22"
tracing-subscriber = "0.3.11"

kannader = { path = "../../kannader" }
smtp-client = { path = "../../smtp-client" }
smtp-message = { path = "../../smtp-message" }
smtp-server = { path = "../../smtp-server" }
